2009-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (find_maxl_keys do_plot): The first entry in a list of
	labels is a placeholder for style information.  Do not reserve space for
	this entry in the key of a columnstacked histogram plot.

2009-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Use AC_SEARCH_LIBS rather than AC_CHECK_LIB when
	checking for lua support. This allows for the library to be named
	something other than liblua.so.
	Bug #2637549

2009-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/hpgl.trm term/tgif.trm term/gd.trm src/graphics.c:
	Fix dereference of uninitialized memory, overlapping memcpy, and
	other problems found by valgrind.

2009-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image print_five_operand_image): Fix
	related to the patch of post.trm from 2009-01-26: images drawn
	"with rgbimage" must always be drawn as rgb colour images.
	SF Patch #2613919: postscript outputs colour RGB as palette image

2009-02-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.term:  "set term canvas {linwidth <lw>}"

2009-02-28  James R. Van Zandt  <jrvz@comcast.net>

	* src/fit.c (fit_command): Allow fitting functions with up to five
	independent variables.  If there is no data to fit, report how
	many data lines were rejected by each range spec.  In fit.log,
	report user-specified dummy variable names and all range
	restrictions (including Z).

	* demo/fit.dem: revise printed comments to show the fit commands.
	Demonstrate fitting a function with three independent variables.

2009-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Introduce a structure canvas_state to hold internal
	state variables.  This allows us to avoid redundant writes of the
	current color, linewidth, fill settings.  The size of image and filled
	curve plots is substantially reduced.

	* src/graphics.c (plot_image_or_update_axes):  